--- a/src/main/webapp/iframe_pick_room2.html
+++ b/src/main/webapp/iframe_pick_room2.html
@@ -57,7 +57,8 @@
 <script>
     var $,element,$b,$remove,seleted=parent.sRooms1,allRoom,getSel=[];
     var downSelected = [];
-    var yyrzxf  =  JSON.parse(localStorage.yyrzxf);
+    var selectParameter  =  JSON.parse(localStorage.getItem(getUrl("parameter")));
+	if(!seleted) seleted = parent.sRooms;
     layui.use(['element', 'jquery', 'table'], function () {
         element = layui.element,
             $ = jQuery = layui.$;
@@ -101,7 +102,7 @@
             url: "room/queryRoomTypeNum",
             type: 'post',
             dataType: "json",
-            data:JSON.parse(localStorage.yyrzxf),
+            data:selectParameter,
             success: function (rs) {
                 var $typeList = $("#typeList");
                 var str = '<p class="room-type-selected">不限</p>';
@@ -142,7 +143,7 @@
     }
 
     function dealHouse(typeid) {
-        var par = JSON.parse(JSON.stringify(yyrzxf));
+        var par = selectParameter;
         if(typeid){
             par.roomTypeId = typeid;
         }
@@ -157,8 +158,6 @@
 
                 var t = allRoom = rs.data;
 
-                // d = d.sort(compare("floorId"));
-                // var t = madeArr(d);
                 var $houseList = $("#houseList");
                 var str = '';
                 $houseList.empty();
