--- a/src/main/webapp/iframe_modifyPriceYYRZ.html
+++ b/src/main/webapp/iframe_modifyPriceYYRZ.html
@@ -177,7 +177,7 @@
 
         var str = '';
         sRooms.map(function(c,i){
-            debugger;
+
             str+=  ['<div class="table-row">',
                 '<div class="cell">',
                 c.name?c.name:c.roomTypeName,
@@ -188,28 +188,55 @@
 
         $table.append(str);
         function _deal(r) {
-
+			var yprice = [];
+			var price = [];
             var _str = '';
-            for(var j in r){
+            for(var i in r){
+                // debugger;
+                if(i.split('/').length>2&&i.indexOf('y')==-1){
+                    price.push({
+						time:new Date(i).getTime(),
+						price:r[i],
+                        date:i,
+                        roomTypeName:r['roomTypeName'],
+                        roomTypeId:r['roomTypeId']
+					})
+				}else if(i.split('/').length>2){
+                    yprice.push({
+                        time:new Date(i.split("y")[1]).getTime(),
+                        price:r[i],
+						date:i.split("y")[1],
+                        roomTypeName:r['roomTypeName'],
+                        roomTypeId:r['roomTypeId']
+                    })
+				}
+			}
 
-                if(j.split('/').length>2&&j.indexOf('y')==-1){
+            yprice = yprice.sort(compare("time"))
+            price = price.sort(compare("time"))
+// debugger;
+            for(var i=0;i<price.length;i++){
+
+
                     _str+=['<div class="cell">',
                         '<input type="number" data-price="',
-                        r['y'+j] ? r['y'+j] : r[j],
+                        yprice[i]['price'],
                         '" data-name="',
                         r['roomTypeName'],
                         '" data-date="',
-                        j,
+                        price[i]['date'],
                         '" class="rti',
                         r['roomTypeId'],
                         '" value="',
-                        ff==1 ? $("#unify").val() : (ff==2&&r['y'+j]) ? r['y'+j] : r[j],
+                        // price[i]['price'],
+                        ff==1 ? $("#unify").val() : (ff==2&&yprice[i]['price']) ? yprice[i]['price'] : price[i]['price'],
                         '"><span>/',
-                        r['y'+j] ? r['y'+j] : r[j],
+                        yprice[i]['price'],
                         '</span>',
                         '</div>'].join("");
-                }
-            }
+
+			}
+
             return _str;
         }
     }
